pxc/tests/test_19_thread/thr5.px
import test_common "";

namespace ttest;
import thread "";

multithreaded struct my_thread_obj (io::system::systemptr sys0) {
  int x;
  int y;
  io::system::systemptr sys = sys0;
  function void main() {
    io::standard::stdout_println(sys, "my thread main");
    io::standard::stdout_println(sys, x);
    io::standard::stdout_println(sys, y);
  }
}

function void test1()
{
  io::system::systemptr i = io::system::systemptr(io::system::system_impl());
    // error: system_impl is not default-constructible
  threadptr thr = thread_create(my_thread_obj(i));
  thr.join();
}

test1();

